--- a/docs/assets/highlight.css
+++ b/docs/assets/highlight.css
@@ -13,10 +13,12 @@
   --dark-hl-5: #569cd6;
   --light-hl-6: #0070c1;
   --dark-hl-6: #4fc1ff;
-  --light-hl-7: #008000;
-  --dark-hl-7: #6a9955;
-  --light-hl-8: #098658;
-  --dark-hl-8: #b5cea8;
+  --light-hl-7: #267f99;
+  --dark-hl-7: #4ec9b0;
+  --light-hl-8: #008000;
+  --dark-hl-8: #6a9955;
+  --light-hl-9: #098658;
+  --dark-hl-9: #b5cea8;
   --light-code-background: #ffffff;
   --dark-code-background: #1e1e1e;
 }
@@ -32,6 +34,7 @@
     --hl-6: var(--light-hl-6);
     --hl-7: var(--light-hl-7);
     --hl-8: var(--light-hl-8);
+    --hl-9: var(--light-hl-9);
     --code-background: var(--light-code-background);
   }
 }
@@ -47,6 +50,7 @@
     --hl-6: var(--dark-hl-6);
     --hl-7: var(--dark-hl-7);
     --hl-8: var(--dark-hl-8);
+    --hl-9: var(--dark-hl-9);
     --code-background: var(--dark-code-background);
   }
 }
@@ -61,6 +65,7 @@
   --hl-6: var(--light-hl-6);
   --hl-7: var(--light-hl-7);
   --hl-8: var(--light-hl-8);
+  --hl-9: var(--light-hl-9);
   --code-background: var(--light-code-background);
 }
 
@@ -74,6 +79,7 @@
   --hl-6: var(--dark-hl-6);
   --hl-7: var(--dark-hl-7);
   --hl-8: var(--dark-hl-8);
+  --hl-9: var(--dark-hl-9);
   --code-background: var(--dark-code-background);
 }
 
@@ -103,6 +109,9 @@
 }
 .hl-8 {
   color: var(--hl-8);
+}
+.hl-9 {
+  color: var(--hl-9);
 }
 pre,
 code {
